--- a/en/coding/directives.html
+++ b/en/coding/directives.html
@@ -22,7 +22,7 @@ Sets what version of [opcodes](../edit-modes/opcodes-list-scm.ini.md) to use dur
 Syntax:\
 `{$VERSION x.y.zzzz}`
 
-* `X`- [edit mode](../edit-modes/) ID
+* `X`- [edit mode](../edit-modes/README.md) ID
 * `y` - parameters order
   * `0` - original: 0, 1, 2, etc
   * `1` - custom order, some parameters reordered
