--- a/es/coding/built-in-commands.html
+++ b/es/coding/built-in-commands.html
@@ -126,7 +126,7 @@ $var *= $var
 ```
 
 {% hint style="info" %}
-El tipo de variable debe ser [declarado](variables.md#var-end-construct).
+El tipo de variable debe ser [declarado](variables.md#constructor-var..end).
 {% endhint %}
 
 ## RANDOM
