--- a/es/coding/classes.html
+++ b/es/coding/classes.html
@@ -30,9 +30,9 @@ Player.SetMinWantedLevel($PLAYER_CHAR, 2)
 
 Hay tres tipos de miembros de la clase:
 
-* [condiciones](#conditions)
-* [métodos](#methods)
-* [propiedades](#properties)
+* [condiciones](#condiciones)
+* [métodos](#métodos)
+* [propiedades](#propiedades)
 
 ### Condiciones
 
@@ -80,7 +80,7 @@ Player($PLAYER_CHAR).Money > 461@ // check the amount
 ```
 
 :::warning
-Actualmente, el compilador ignora los espacios en blanco en las [cadena literarias](data-types.md#string-literals) utilizadas en los parámetros de propiedad:
+Actualmente, el compilador ignora los espacios en blanco en las [cadenas](data-types.md#string-literals) utilizadas en los parámetros de propiedad:
 
 ```sb3
 0@ = File.Open("file name","wb")
