--- a/ru/coding/comments.html
+++ b/ru/coding/comments.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
   <title>Комментарии</title>
   <meta charset="utf-8">
@@ -11,6 +11,11 @@
 
 Комментарии обозначаются в коде двумя слэшами `//`. Все, что идет после `//` до конца строки, игнорируется компилятором.
 
+```sb3
+// это игнорируется
+0001: wait 0 ms
+```
+
 Для того чтобы закомментировать несколько строк сразу либо только часть строки (например в середине или начале), используйте блочные комментарии `{}` 
 
 ```sb3
@@ -20,7 +25,11 @@
 Начиная с версии 3.06 Sanny Builder поддерживает C++-подобные комментарии `/* */`. 
 
 ```sb3
-0001: wait /* комментарий */ 0 ms
+0000: nop
+/*
+  это игнорируется
+*/
+0001: wait 0 ms
 ```
 
 Также вы можете закомментировать несколько строк, выделив их и нажав `Ctrl+Q` (это сочетание клавиш можно изменить в [опциях](../editor/options/hotkeys.md)). Для раскоментирования выделите текст и нажмите `Ctrl+Q` еще раз.
