--- a/es/coding/constants.html
+++ b/es/coding/constants.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-Una **constante** es un identificador con un valor predefinido. A diferencia de una variable, el valor de la constante no se puede cambiar en tiempo de ejecución. En tiempo de compilación, la constante se reemplaza por el valor asociado a ella. El valor de la constante puede ser numérico (números, [nombres de modelo](data-types.md#model-names) o [etiquetas](data-types.md#labels)) y una cadena (literales de cadena), y contener un expresión.
+Una **constante** es un identificador con un valor predefinido. A diferencia de una variable, el valor de la constante no se puede cambiar en tiempo de ejecución. En tiempo de compilación, la constante se reemplaza por el valor asociado a ella. El valor de la constante puede ser numérico (números, [nombres de modelo](data-types.md#nombres-de-modelos) o [etiquetas](data-types.md#etiquetas)) y una [cadena](data-types.md#cadenas-literarias), y contener un expresión.
 
 Las constantes se declaran estática o dinámicamente. Cada [modo de edición](../edit-modes/README.md) uede cargar definiciones de constantes estáticas desde un archivo usando el parámetro `<constants>` en el `modes.xml`. Las declaraciones dinámicas se crean en el código del script con la sintaxis que se describe a continuación.
 
@@ -23,7 +23,7 @@ Para declarar una nueva constante en el código, use la construcción `CONST..EN
 \
 Un nombre constante es cualquier identificador permitido (una combinación de letras, números y `_`). Hay nombres reservados por el compilador que no se pueden usar, como `Continue`, `Break`, `And`, etc. (mire `compiler.ini`).
 
-Un valor constante puede ser un número (también un [identificador de modelo](data-types.md#model-names) o una [etiqueta](data-types.md#labels)); a [string literal](data-types.md#string-literals); una [variable](variables.md) (también una [propiedad de clase] (classes.md#properties)); otra constante.
+Un valor constante puede ser un número (también un [identificador de modelo](data-types.md#nombres-de-modelos), una [etiqueta](data-types.md#etiquetas)), una [cadana](data-types.md#cadenas-literarias), una [variable](variables.md) (también una [propiedad de clase](classes.md#propiedades)), o otra constante.
 
 ```sb3
 var
