Added internal tools

--- a/en/scm-documentation/sa/weather.html
+++ b/en/scm-documentation/sa/weather.html
@@ -11,6 +11,9 @@
 ```sb3
 01b6: set_weather &lt;id&gt;
 ```
+:::success
+Definitions: **L**os **S**antos, **S**an **F**ierro, **L**as **V**enturas, **C**ountryside, **D**esert, **S**pecial
+:::
 |Description|ID|GXT|
 |-|
 |LA: Extra Sunny|0|WEATH0|
@@ -36,6 +39,4 @@
 |S: Underwater|20|WEATH20|
 |S: Extracolours 1|21|WEATH21|
 |S: Extracolours 2|22|WEATH22|
-
-> **L**os **S**antos, **S**an **F**ierro, **L**as **V**enturas, **C**ountryside, **D**esert, **S**pecial
 <script src="../../../js/main.min.js"></script>
