--- a/en/version-history.html
+++ b/en/version-history.html
@@ -9,6 +9,14 @@
 </head>
 <body>
 
+## v. 3.8.1 Release Plan
+[h3][Features]\
+[x] translation updates (Spanish, Ukrainian, Romanian, Armenian).
+[x] add new community themes [https://github.com/sannybuilder/themes](https://github.com/sannybuilder/themes).
+[x] update local CHM help [https://github.com/MatiDragon-YT/help-system](https://github.com/MatiDragon-YT/help-system).
+[] CLEO+ 1.0.9 [https://github.com/JuniorDjjr/CLEOPlus/releases/tag/v1.0.9](https://github.com/JuniorDjjr/CLEOPlus/releases/tag/v1.0.9).
+[] [🟢 New edit modes for the Definitive Edition #179](https://github.com/sannybuilder/dev/issues/179).
+
 ## v. 3.8.0 - 04.08.2021
 
 * [integration with Sanny Builder Library](editor/features.md#integration-with-sanny-builder-library): a new portal documenting all known opcodes
@@ -507,4 +515,4 @@ The class member `Car.SetSpeedInstantly` was named incorrectly (with a wrong opc
 * compilation of text sources into `main.scm` and `script.img`
 * basic features for text editing
 
-<script src="../js/main.min.js"></script>
+<script src="../js/main.js"></script>
