--- a/es/scm-documentation/sa/weather.html
+++ b/es/scm-documentation/sa/weather.html
@@ -11,7 +11,9 @@
 ```sb3
 01b6: set_weather &lt;id&gt;
 ```
-
+:::success
+Definiciones: **L**os **S**antos, **S**an **F**ierro, **L**as **V**enturas, **C**ountryside, **D**esert, **S**pecial
+:::
 |Descripción|ID|GXT|
 |-|
 |LA: Extra soleado|0|WEATH0|
@@ -37,6 +39,4 @@
 |S: Bajo el agua|20|WEATH20|
 |S: Extracoloridos 1|21|WEATH21|
 |S: Extracoloridos 2|22|WEATH22|
-
-> **L**os **S**antos, **S**an **F**ierro, **L**as **V**enturas, **C**ountryside, **D**esert, **S**pecial
 <script src="../../../js/main.min.js"></script>
