--- a/es/version-history.html
+++ b/es/version-history.html
@@ -9,6 +9,14 @@
 </head>
 <body>
 
+## v. 3.8.1 Plan de Lanzamiento
+[h3][Características]\
+[x] actualización de traducción (Español, Ucraniano, Rumano, Armenio).
+[x] añade nuevos temas de la comunidad [https://github.com/sannybuilder/themes](https://github.com/sannybuilder/themes).
+[x] actualización de CHM de ayuda local [https://github.com/MatiDragon-YT/help-system](https://github.com/MatiDragon-YT/help-system).
+[] actualización de CLEO+ a la 1.0.9 [https://github.com/JuniorDjjr/CLEOPlus/releases/tag/v1.0.9](https://github.com/JuniorDjjr/CLEOPlus/releases/tag/v1.0.9).
+[] [🟢 Nuevo modo de edición para los Definitive Edition #179](https://github.com/sannybuilder/dev/issues/179).
+
 ## v. 3.8.0 - 04.08.2021
 
 * [integración con Sanny Builder Library](editor/features.md#integration-with-sanny-builder-library): un nuevo portal que documenta todos los opcodes conocidos
