--- a/ru/version-history.html
+++ b/ru/version-history.html
@@ -9,6 +9,14 @@
 </head>
 <body>
 
+## v. 3.8.1 План выпуска
+[h3][Характеристики]\
+[x] обновления переводов (испанский, украинский, румынский, армянский).
+[x] добавлять новые темы сообщества [https://github.com/sannybuilder/themes](https://github.com/sannybuilder/themes).
+[x] обновить локальную справку CHM [https://github.com/MatiDragon-YT/help-system](https://github.com/MatiDragon-YT/help-system).
+[] CLEO+ 1.0.9 [https://github.com/JuniorDjjr/CLEOPlus/releases/tag/v1.0.9](https://github.com/JuniorDjjr/CLEOPlus/releases/tag/v1.0.9).
+[] [🟢 Новые режимы редактирования для Definitive Edition #179](https://github.com/sannybuilder/dev/issues/179).
+
 ## v. 3.8.0 - 04.08.2021
 
 * [интеграция с Sanny Builder Library](editor/features.md#integration-with-sanny-builder-library): новым порталом с документацией по всем известным опкодам
