--- a/ru/cleo-3/scripts.html
+++ b/ru/cleo-3/scripts.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="ru">
 <head>
-	<title>Scripts</title>
+	<title>скрипты</title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,38 +9,59 @@
 </head>
 <body>
 
-CLEO 3 allows adding new scripts needlessly to start a new game. Strictly speaking, the main.scm state does not matter for these scripts as CLEO-scripts are run and functioned separately from it.
+CLEO 3 позволяет добавлять новые скрипты без необходимости начала новой игры. Строго говоря. для них не имеет значения состояние вашего main.scm. CLEO-скрипты запускаются и функционируют отдельно от main.scm.
 
-What does it give? You can add new script at any stage of the game or delete existing one. Even so, you do not need to edit the main.scm, so the need of starting a new game, the saves incompatibility, script limits – all these problems disappear right away.
+Что это дает? Вы можете в любой момент игры добавить новые скрипты, а также удалить имеющиеся. При этом вам не требуется редактировать main.scm, а значит пропадают проблемы с необходимостью начала новой игры, несовместимостью сейвов, [скриптовыми лимитами](../scm-documentation/gta-limits.md) и так далее.
 
-The CLEO-script is an ordinary script written using the opcodes in Sanny Builder. Each script should be made as a single file with an extension .cs (Custom Script). The dominant requirement of writing such scripts is they must be compiled as the external scripts.
+CLEO-скрипт – это обычный скрипт, написанный с использованием опкодов в Sanny Builder. Каждый скрипт должен быть выполнен в виде отдельного файла с расширением .cs (Custom Script). Главное требование, которое предъявляется к написанию таких скриптов, это то, что они должны быть скомпилированы как внешние скрипты.
 
-There are several ways of making of a CLEO-script being able to work correctly in the game. First: you add a new external script in the source file, compile it, and then extract that script from the file script.img. The extracted file will have the extension .scm, so you only need to change it on the .cs and copy to the folder ‘game\CLEO’.
+Существует несколько способов написания CLEO-скрипта, способного нормально работать в игре. 
+Во-первых, вы добавляете в исходник новый [внешний скрипт](../articles/users.md), после этого компилируете, и извлекаете нужный файл из script.img. Этот файл будет иметь расширение .scm, и вам останется только изменить его на .cs и скопировать в папку `игра\CLEO`.
+Второй способ гораздо проще. Создайте новый файл в Sanny Builder’е, напишите в начале [директиву $E](../coding/directives.html#$external), после этого код скрипта и скомпилируйте. Полученный файл будет точно такой, как если бы вы извлекли его из script.img. Вам останется только дать ему нужное расширение .cs и скопировать в папку `\CLEO`.
 
-The second way is easier. Create a new file in Sanny Builder, write the [directive $E](../coding/directives.md#external) at the beginning of it, and compile. The compiled file will be the same as that one extracted from the script.img. You only need to change its extension on the .cs and copy to the ‘game\CLEO’.
+Наконец, самый простой способ. Создайте новый файл, в начале напишит [ директиву {$CLEO .cs}](../coding/directives.md#$cleo) (или с другим расширением), после этого код скрипта и скомпилируйте. Файл автоматически будет скопирован в директорию CLEO и будет иметь такое расширение, которое вы указали в директиве $CLEO (.cs по умолчанию).
 
-Finally, the easiest one. Create a new file in Sanny Builder, write the [directive $CLEO](../coding/directives.md#cleo) at the beginning of the file, and compile. The compiled file will be copied into the ‘game\CLEO’ directory and will have a file extension specified by the directive (.cs by default).
+CLEO-скрипты могут использоваться и как миссии. Процесс компиляции точно такой же, однако итоговый файл должен иметь расширение .cm (Custom Mission). Для того чтобы запустить такую миссию, используйте [опкод  0A94](opcodes.md#0A94).
 
-The CLEO-scripts could be used as missions. The compiling process is the same, but the output file must have the extension .cm (Custom Mission). To start this mission, use the [opcode 0A94](opcodes.md#0A94).
+Правила, которым вы обязаны следовать при использовании CLEO 3:
 
-The rules you must follow using CLEO 3:
+1. **Один файл – один поток**. Каждый CLEO-скрипт должен быть выполнен в виде отдельного потока, который компилируется в отдельный файл. Если вам нужно создавать дополнительные потоки для вашего скрипта, используйте опкоды 004F или [0A92](opcodes.md#0A92), в зависимости от того, где находится этот поток: в main.scm или отдельном cs-файле.
+2. **Никогда не используйте опкод 004E в CLEO-скриптах**. Они работают отдельно от обычных потоков, и использование этого опкода вызовет ошибку. Если вам нужно остановить CLEO-поток, используйте [опкод 0A93](opcodes.md#0A93) **В CLEO-миссиях наоборот никогда не используйте опкод 0A93**, а для остановки миссии используйте 004E.
+3. **Не используйте в CLEO-скрипте собственные глобальные переменные ($car, $blahblah и т.д.)**, иначе скрипт будет работать неправильно. Вы можете использовать только некоторые глобальные переменные (см. ниже).
 
-1. **One file - one thread**. Each CLEO-script must be made as a single thread compiled in a single file. If you need more threads for your script, use the opcodes 004F or [0A92](opcodes.md#0A92), depending of where is that additional thread located - in the main.scm or in a separate cs-file.
-2. **Never use the opcode 004E in the CLEO-threads**. They work separately from the common threads, so the using of this opcode will cause an error. Use the opcode 0A93, if you need to stop a CLEO-thread. Conversely, never use [the opcode 0A93](opcodes.md#0A93) in the CLEO-missions, but instead use the 004E to cancel a mission.
-3. **Never use custom global variables in your CLEO-scripts ($car, $foo, $blahblah, etc)**, or your script will work incorrectly. You may use only a few global variables (read below).
+Как уже говорилось, для установки скрипта достаточно скопировать его в папку ‘игра\CLEO’. Имя файла не имеет значения, работа с файлами происходит по расширению. Однако имя файла используется при инициализации CLEO-потока, чтобы дать ему имя (name_thread) по названию файла (первые 7 символов). Например, CLEO-поток в файле showsavescreen будет иметь имя SHOWSAV.
+Для удаления скрипта из игры просто удалите соответствующий файл.
 
-To install the CLEO script it’s only necessary to copy the file with an extension .cs to the folder ‘game\CLEO’. The file name does not matter, but it uses at the thread initialization to name it. For example, the CLEO thread located in the file showsavescreen.cs has the name SHOWSAV.
+Статус CLEO-потоков может сохраняться и загружаться вместе с обычными потоками. По умолчанию  эти потоки не сохраняются. Сами сейвы находятся отдельно, в папке CLEO\cleo_saves. Для каждого  слота используется отдельный сейв. В сейве сохраняются только те CLEO-потоки, для которых  включен флаг сохранения ([опкод 0A95](opcodes.md#0A95)). В сейве сохраняются не только активные потоки, но и те, которые были завершены ([опкод 0A93](opcodes.md#0A93)), чтобы предотвратить их повторную загрузку. Если при  последующей загрузке один из сохраненных скриптов не будет найден, ошибки не будет. Если вы  добавите новый скрипт, которого нет в сейве, он запустится вместе со всеми и начнет работать с  начала.
 
-To remove the script, just delete the proper file from the CLEO directory.
+В целом CLEO-потоки такие же как и обычные потоки. У них также 32 локальных переменных и 2 таймера. При создании CLEO-потока или CLEO-миссии можно передавать в них до 34 параметров (по аналогии с опкодом 004F).
 
-The CLEO thread status may be saved and loaded along with the common threads. It does not saved by default. The saves themselves are located in the folder CLEO\cleo_saves. The is an own save for each save slot. The save file stores only the CLEO threads having the saving flag enabled ([0A95 opcode](opcodes.md#0A95)). The save file stores not only the active threads, but also the ones being forced to end ([0A93 opcode](opcodes.md#0A93)), to prevent their rerun at loading. If at the loading one of saved thread is not found, there is no error. If you add a new script that is not present in the current save file, it will be loaded along with the others and to work from the very beginning.
+Важный момент, связанный с обменом данными между CLEO-скриптом и main.scm. Чтобы пользоваться кодом из майна, его переменными, потоками, вы должны компилировать CLEO-скрипт как внешний скрипт, а затем извлекать из script.img. Однако этот способ очень не рекомендован, поскольку такой скрипт становится весьма чувствительным к изменению main.scm. По *смыслу, CLEO-скрипты должны быть самодостаточными и использовать минимум ресурсов главного скм-файла*. Вы, однако, можете свободно использовать имена глобальных переменных из файла CustomVariables.ini (например, $PLAYER_CHAR, $PLAYER_ACTOR, $ONMISSION и т.д.).
+Также для обмена данными между main.scm и CLEO, или между CLEO-скриптами вы можете использовать CLEO-переменные (см. опкоды 0AB3, 0AB4).
 
-The CLEO thread is the ordinary thread on the whole. It has 32 local variables and 2 timers incrementing constantly. You can pass up to 34 parameters at creation of that thread or a CLEO mission (by analogy with the opcode 004F).
+В комплект CLEO 3 включены примеры простых скриптов с исходниками.
 
-An important thing concerns with data communication between a CLEO script and the main.scm. To use the SCM code, its variables, threads you have to compile the CLEO script as an external one (first way). But this method is not recommended, as such a script becomes very sensible to the any main.scm change. *Implicitly, a CLEO script should be sufficient for itself and use minimum of the SCM data*. However, you can freely use global variables names from the CustomVaribles.ini (for example, `$PLAYER_CHAR`, `$PLAYER_ACTOR`, `$ONMISSION`, etc).
-Also, for the data communicate between the main.scm and CLEO, or between the CLEO scripts you may use the CLEO variables (see opcodes 0AB3, 0AB4).
+Описание примеров CLEO-скриптов:
 
-The CLEO complete set includes the examples of simple scripts with sources.
+**test_example.txt**
 
+Базовый пример создания CLEO-скрипта. Смысл его заключается в выводе сообщения при запуске игры. Для этого используется доп. скрипт ShowTextBox, который показывает текстбокс на экране. Данный пример может служит основой для вывода тестовых сообщений в любом моде.
 
+Скрипт срабатывает однократно при запуске игры. После сохранения-загрузки сообщение появляться не будет (благодаря опкоду 0A95). TXT-файл (исходник), [здесь](%e/examples/test_example.txt).
+
+**showsavescreen.txt**
+
+Пример постоянно работающего скрипта. Представляет собой бесконечный цикл, проверяющий нажатие кнопки F4. После ее нажатия появляется окно сохранения. TXT-файл (исходник), [здесь](%e/examples/showsavescreen.txt).
+
+**CustomMission.txt**
+
+Болванка CLEO-миссии. Если создать скрипт по аналогии с showsavescreen, только вместо вывода экрана сохранения использовать 0A94, можно запускать эту миссию. TXT-файл (исходник), [здесь](%e/examples/CustomMission.txt).
+
+**otbhook.txt**
+
+Пример хука. Этот скрипт проверяет запущена ли миссия OTB (скачки на лошадях), и если да, то повышает значения ставок. Скрипт предназначен для оригинальной игры. TXT-файл (исходник), [здесь](%e/examples/otbhook.txt).
+
+**VCCam.txt**
+
+Позаимствовано из мультимода Capushon’а. Скрипт меняет положение камеры при езде на машине, делая обзор гораздо удобнее. TXT-файл (исходник), [здесь](%e/examples/VCCam.txt).
 <script src="../../js/main.min.js"></script>
