text `button` -> `ID`

--- a/en/scm-documentation/sa/buttons.html
+++ b/en/scm-documentation/sa/buttons.html
@@ -9,10 +9,10 @@
 </head>
 <body>
 ```sb3
-00E1: key_pressed 0 &lt;button&gt;
+00E1:   player 0 button_pressed &lt;id&gt;
 ```
 
-|Button|Enum|On foot|In a vehicle|
+|ID|Enum|On foot|In a vehicle|
 |-|
 |0|LEFTSTICKX|Left / Right|Steer Left / Right|
 |1|LEFTSTICKY|Forward / Backwards|Steer Forward / Backward|
