--- a/es/scm-documentation/sa/buttons.html
+++ b/es/scm-documentation/sa/buttons.html
@@ -9,10 +9,10 @@
 </head>
 <body>
 ```sb3
-00E1:   player 0 key_pressed &lt;botón&gt;
+00E1:   player 0 button_pressed &lt;id&gt;
 ```
 
-|De pie|En vehículo|Enum|Botón|
+|De pie|En vehículo|Enum|ID|
 |-|
 |IZQUIERDA\nDERECHA|IZQUIERDA\nDERECHA|LEFTSTICKX|0|
 |ADELANTE\nATRÁS|ACELERAR\nRETROCEDER|LEFTSTICKY|1|
@@ -38,5 +38,3 @@
 [https://gtamods.com/wiki/00E1](https://gtamods.com/wiki/00E1)
 
 <script src="../../../js/main.min.js"></script>
-
-<script>
