--- a/ru/scm-documentation/sa/buttons.html
+++ b/ru/scm-documentation/sa/buttons.html
@@ -9,10 +9,10 @@
 </head>
 <body>
 ```sb3
-00E1: key_pressed 0 &lt;номер&gt;
+00E1:   player 0 button_pressed 0 &lt;id&gt;
 ```
 
-|Номер|Константа|Пешком|В машине|
+|ID|Константа|Пешком|В машине|
 |-|
 |0|LEFTSTICKX|Left / Right|Steer Left / Right|
 |1|LEFTSTICKY|Forward / Backwards|Steer Forward / Backward|
